--- a/index.html
+++ b/index.html
@@ -16,20 +16,31 @@
   </style>
 </head>
 <body>
+  <header> </header>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <main>
+    <figure>
+      <img >
+      <figcaption>
+        <h1>Jessica Randall</h1>
+        <p>London, United Kingdom</p>
+        <p>"Front-end developer and avid reader."</p>
+      </figcaption>
+    </figure>
+    <div>
+      <a href="https://www.github.com">GitHub</a>
+      <a href="https://www.frontendmentor.io">Frontend Mentor</a>
+      <a href="https://www.linkedin.com">LinkedIn</a>
+      <a href="https://www.twitter.com">Twitter</a>
+      <a href="https://www.instagram.com">Instagram</a>
+    </div>
+  </main>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
+  <footer>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Rick Sanchez</a>.
+    </div>
+  </footer>
 </body>
 </html>
