add image to markup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main>
     <figure>
-      <img >
+      <img src="assets/images/avatar-jessica.jpeg" alt="profile picture">
       <figcaption>
         <h1>Jessica Randall</h1>
         <p>London, United Kingdom</p>
