add font+ links area styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Social links profile</title>
 
@@ -27,7 +31,7 @@
         <p>"Front-end developer and avid reader."</p>
       </figcaption>
     </figure>
-    <div>
+    <div class="links-area">
       <a href="https://www.github.com">GitHub</a>
       <a href="https://www.frontendmentor.io">Frontend Mentor</a>
       <a href="https://www.linkedin.com">LinkedIn</a>
