add nav tag to links area

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <p>"Front-end developer and avid reader."</p>
     </figure>
   
-    <div class="links-area">
+    <nav class="links-area" aria-label="Social Media Links">
       <a href="https://www.github.com">GitHub</a>
       <a href="https://www.frontendmentor.io">Frontend Mentor</a>
       <a href="https://www.linkedin.com">LinkedIn</a>
       <a href="https://www.twitter.com">Twitter</a>
       <a href="https://www.instagram.com">Instagram</a>
-    </div>
+    </nav>
   </main>
 
   <footer>
